# SnakesAndLaddersF

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
Tests/ServerTests/: CMakeLists.txt  main.cpp
Tests/ServerTests/GameManagementTests/: GameManagementTests.h
Tests/ServerTests/GameManagementTests/GameManagerTests/: MockGameManager.h
Tests/ServerTests/GameManagementTests/LobbyManagerTests/: LobbyManagerTests.h  MockLobbyManager.h
Tests/ServerTests/GameManagementTests/ObjectTests/: LobbyTests.h  PlayerTests.h  RunningGameTests.h
Tests/ServerTests/InfrastructureTests/: InfrastructureTests.h
Tests/ServerTests/InfrastructureTests/CommandTests/: CommandTests.h
Tests/ServerTests/InfrastructureTests/GameTests/: GameRoutesTests.h
Tests/ServerTests/InfrastructureTests/LobbyTests/: LobbyRoutesTests.h
frontend/: .gitignore  CMakeLists.txt  main.cpp
frontend/core/: ApiEndpoints.h  BaseResponse.cpp  BaseResponse.h  BaseService.cpp  BaseService.h
frontend/models/: DiceValue.h  Game.cpp  Game.h  GameStats.cpp  GameStats.h  Lobby.cpp  Lobby.h  MapType.h  Player.cpp  Player.h  PlayerColor.h  TurnTime.h
frontend/observers/: Observer.h  Subject.cpp  Subject.h  ViewObserver.cpp  ViewObserver.h
frontend/resources/: FontManager.h  resources.qrc
frontend/services/: GameService.cpp  GameService.h  GameUpdater.cpp  GameUpdater.h  LobbyService.cpp  LobbyService.h  LobbyUpdater.cpp  LobbyUpdater.h
frontend/state/: GameState.cpp  GameState.h  LobbyState.cpp  LobbyState.h  UserState.cpp  UserState.h
frontend/utils/: CurrentUser.cpp  CurrentUser.h  Logger.cpp  Logger.h  ViewManager.cpp  ViewManager.h
frontend/views/: homeview.cpp  homeview.h  homeview.ui  mainwindow.h
frontend/views/createGameView/: creategameview.cpp  creategameview.h  creategameview.ui
frontend/views/gameView/: gameview.cpp  gameview.h  gameview.ui
frontend/views/homeView/: homeview.cpp  homeview.h  homeview.ui
frontend/views/joinGameView/: joingameview.cpp  joingameview.h  joingameview.ui
frontend/views/lobbyView/: lobbyview.cpp  lobbyview.h  lobbyview.ui
frontend/views/statsView/: statsview.cpp  statsview.h  statsview.ui
frontend/widgets/GamePlayerInfoWidget/: gameplayerinfowidget.cpp  gameplayerinfowidget.h  gameplayerinfowidget.ui
frontend/widgets/InfoDialog/: infodialog.cpp  infodialog.h  infodialog.ui
frontend/widgets/Map/: map.cpp  map.h
frontend/widgets/PlayerInfoWidget/: playerinfowidget.cpp  playerinfowidget.h  playerinfowidget.ui
frontend/widgets/StatsPlayerInfoWidget/: statsplayerinfowidget.cpp  statsplayerinfowidget.h  statsplayerinfowidget.ui
frontend/windows/: mainwindow.ui
server/: API.h  CMakeLists.txt  Routes.md  main.cpp
server/GameManagement/: MapTypeEnum.h  Player.h  PlayerColor.h
server/GameManagement/Game/: GameManager.cpp  GameManager.h
server/GameManagement/Lobby/: LobbyManager.cpp  LobbyManager.h
server/GameManagement/Objects/: Lobby.cpp  Lobby.h  MapTypeEnum.h  Player.cpp  Player.h  RunningGame.cpp  RunningGame.h
server/Infrastructure/: BaseContext.h  BaseResponse.cpp  BaseResponse.h  ValidationResponse.cpp  ValidationResponse.h
server/Infrastructure/Lobby/CreateLobby/: CreateLobbyContext.cpp  CreateLobbyContext.h  CreateLobbyRequest.cpp  CreateLobbyRequest.h  CreateLobbyResponse.cpp  CreateLobbyResponse.h
server/Infrastructure/Lobby/JoinLobby/: JoinLobbyContext.cpp  JoinLobbyRequest.h  JoinLobbyResponse.cpp  JoinLobbyResponse.h
server/Infrastructure/Lobby/LeaveLobby/: LeaveLobbyContext.h  LeaveLobbyResponse.cpp  LeaveLobbyResponse.h
server/Infrastructure/Lobby/LobbyStatus/: LobbyStatusContext.h  LobbyStatusRequest.h  LobbyStatusResponse.h
server/Infrastructure/Lobby/UpdateLobbySettings/: UpdateSettingsContext.cpp  UpdateSettingsRequest.cpp  UpdateSettingsResponse.cpp  UpdateSettingsResponse.h
server/Routes/: ChangeLobbySettingsRoute.h  CreateLobbyRoute.h  GameStatisticsRoute.h  GameStatusRoute.h  JoinLobbyRoute.h  LeaveGameRoute.h  LeaveLobbyRoute.h  RollDiceRoute.h  StartGameRoute.h  StatusLobbyRoute.h
server/maps/: 1.json
server_lib/: CMakeLists.txt
server_lib/GameManagement/Game/: GameManager.cpp  GameManager.h
server_lib/GameManagement/Lobby/: LobbyManager.cpp  LobbyManager.h
server_lib/GameManagement/Objects/: BaseObject.cpp  BaseObject.h  Lobby.cpp  Lobby.h  MapTypeEnum.h  Player.cpp  Player.h  RunningGame.cpp  RunningGame.h
server_lib/Infrastructure/: BaseContext.h  BaseResponse.cpp  BaseResponse.h  HttpCommand.cpp  HttpCommand.h  JsonSerializer.cpp  JsonSerializer.h  Request.cpp  Request.h  RequestWrapper.cpp  RequestWrapper.h  UniversalResponse.cpp  UniversalResponse.h
server_lib/Infrastructure/Commands/: ChangeLobbySettingsCommand.cpp  ChangeLobbySettingsCommand.h  CreateLobbyCommand.cpp  CreateLobbyCommand.h  GameStatisticsCommand.cpp  GameStatisticsCommand.h  GameStatusCommand.cpp  GameStatusCommand.h  HttpCommand.cpp  HttpCommand.h  JoinLobbyCommand.cpp  JoinLobbyCommand.h  LeaveGameCommand.cpp  LeaveGameCommand.h  LeaveLobbyCommand.cpp  LeaveLobbyCommand.h  RollDiceCommand.cpp  RollDiceCommand.h  StartGameCommand.cpp  StartGameCommand.h  StatusLobbyCommand.cpp  StatusLobbyCommand.h
server_lib/Infrastructure/Game/GameStatistics/: GameStatisticsContext.cpp  GameStatisticsContext.h  GameStatisticsRequest.cpp  GameStatisticsRequest.h  GameStatisticsResponse.cpp  GameStatisticsResponse.h
server_lib/Infrastructure/Game/GameStatus/: GameStatusContext.cpp  GameStatusContext.h  GameStatusRequest.cpp  GameStatusRequest.h  GameStatusResponse.cpp  GameStatusResponse.h
server_lib/Infrastructure/Game/LeaveGame/: LeaveGameContext.cpp  LeaveGameContext.h  LeaveGameRequest.cpp  LeaveGameRequest.h  LeaveGameResponse.cpp  LeaveGameResponse.h
server_lib/Infrastructure/Game/RollDice/: RollDiceContext.cpp  RollDiceContext.h  RollDiceRequest.cpp  RollDiceRequest.h  RollDiceResponse.cpp  RollDiceResponse.h
server_lib/Infrastructure/Lobby/CreateLobby/: CreateLobbyContext.h  CreateLobbyRequest.h  CreateLobbyResponse.cpp  CreateLobbyResponse.h
server_lib/Infrastructure/Lobby/JoinLobby/: JoinLobbyContext.cpp  (+5 more)
(+39 files in other folders)
